--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 00:05:04 2018</p>
+         Last Run: Wed Nov 21 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>3</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
+                 "56",
                  "61",
                  "66"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 00:05:04 2018</p>
+         Last Run: Wed Nov 21 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -246,14 +246,14 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-5</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>4</td>
                         <td>66</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>58</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -277,7 +277,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>25</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -289,7 +289,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>21</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -317,7 +317,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
+                 "-4",
                  "-3",
                  "-3",
                  "-3"
@@ -330,7 +330,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "0",
                  "0",
                  "0"
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
+                 "59",
                  "38",
-                 "25",
-                 "21"
+                 "24",
+                 "20"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 00:05:04 2018</p>
+         Last Run: Wed Nov 21 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -483,11 +483,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>61</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>49</td>
+                        <td>WNW</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -495,23 +495,23 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>48</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>3</td>
-                        <td>55</td>
+                        <td>2</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>47</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -611,7 +611,7 @@
                "data":[
                  "2",
                  "2",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
-                 "57",
-                 "55"
+                 "60",
+                 "56",
+                 "54"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
-                 "48",
-                 "47"
+                 "46",
+                 "45",
+                 "44"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 00:05:04 2018</p>
+         Last Run: Wed Nov 21 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -695,14 +695,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Overcast</td>
-                        <td>-3</td>
-                        <td>-7</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>3</td>
-                        <td>73</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>85</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,11 +710,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>3</td>
-                        <td>75</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>84</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -726,7 +726,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>84</td>
+                        <td>83</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,7 +753,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
+                 "-6",
                  "-7",
                  "-7"
                ]
@@ -765,7 +765,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "-3",
                  "-3"
                ]
@@ -835,8 +835,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "71",
                  "73",
-                 "75",
                  "75"
                ]
              },
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "85",
                  "84",
-                 "84"
+                 "83",
+                 "83"
                ]
              }
            ]
