--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 01:05:02 2018</p>
+         Last Run: Wed Nov 21 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -46,11 +46,11 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>61</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>62</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>66</td>
+                        <td>65</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SSW</td>
-                        <td>67</td>
+                        <td>64</td>
                      </tr>
                   </tbody>
                </table>
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "56",
-                 "61",
-                 "66"
+                 "60",
+                 "65"
                ]
              },
              {
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "69",
-                 "62",
-                 "67"
+                 "68",
+                 "64"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 01:05:02 2018</p>
+         Last Run: Wed Nov 21 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -248,12 +248,12 @@
                         <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>66</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>59</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,23 +261,23 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
-                        <td>61</td>
+                        <td>59</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>38</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>4</td>
-                        <td>59</td>
+                        <td>57</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>24</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -285,11 +285,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
-                        <td>61</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SE</td>
-                        <td>20</td>
+                        <td>SSE</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -319,7 +319,7 @@
                "data":[
                  "-4",
                  "-3",
-                 "-3",
+                 "-2",
                  "-3"
                ]
              },
@@ -332,7 +332,7 @@
                "data":[
                  "-1",
                  "0",
-                 "0",
+                 "1",
                  "0"
                ]
              }
@@ -391,7 +391,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
+                 "5",
                  "4",
                  "4",
                  "4"
@@ -404,9 +404,9 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "66",
-                 "61",
                  "59",
-                 "61"
+                 "57",
+                 "59"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "59",
-                 "38",
-                 "24",
-                 "20"
+                 "52",
+                 "34",
+                 "22",
+                 "19"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 01:05:02 2018</p>
+         Last Run: Wed Nov 21 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -480,26 +480,26 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>2</td>
-                        <td>60</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>46</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
                         <td>2</td>
-                        <td>56</td>
+                        <td>0</td>
+                        <td>2</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>45</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -507,7 +507,7 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>54</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NW</td>
@@ -538,8 +538,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
                  "-2",
+                 "0",
                  "0"
                ]
              },
@@ -550,8 +550,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
                  "1",
+                 "2",
                  "2"
                ]
              }
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
-                 "56",
-                 "54"
+                 "57",
+                 "53",
+                 "52"
                ]
              },
              {
@@ -631,8 +631,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "45",
+                 "51",
+                 "47",
                  "44"
                ]
              }
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 01:05:02 2018</p>
+         Last Run: Wed Nov 21 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -694,39 +694,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>3</td>
-                        <td>71</td>
+                        <td>4</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>84</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>3</td>
+                        <td>4</td>
+                        <td>72</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>SW</td>
+                        <td>65</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>4</td>
                         <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>83</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
-                        <td>Overcast</td>
-                        <td>-3</td>
-                        <td>-7</td>
-                        <td>3</td>
-                        <td>75</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>SW</td>
-                        <td>83</td>
+                        <td>64</td>
                      </tr>
                   </tbody>
                </table>
@@ -824,9 +824,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
-                 "3"
+                 "4",
+                 "4",
+                 "4"
                ]
              },
              {
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "73",
-                 "75"
+                 "70",
+                 "72",
+                 "73"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "84",
-                 "83",
-                 "83"
+                 "68",
+                 "65",
+                 "64"
                ]
              }
            ]
