--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 05:05:02 2018</p>
+         Last Run: Wed Nov 21 06:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>3</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>70</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,19 +46,19 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>59</td>
+                        <td>60</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SSW</td>
-                        <td>68</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
                         <td>1</td>
-                        <td>64</td>
+                        <td>-3</td>
+                        <td>1</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SSW</td>
@@ -91,7 +91,7 @@
                "data":[
                  "-1",
                  "-2",
-                 "-2"
+                 "-3"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "3",
                  "2",
-                 "2"
+                 "1"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "59",
-                 "64"
+                 "56",
+                 "60",
+                 "65"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "70",
                  "68",
+                 "67",
                  "63"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 05:05:02 2018</p>
+         Last Run: Wed Nov 21 06:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -245,15 +245,15 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
                         <td>65</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>53</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,35 +261,35 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
-                        <td>59</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>34</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>4</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>22</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>0</td>
-                        <td>-3</td>
+                        <td>-4</td>
                         <td>4</td>
                         <td>58</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>19</td>
+                        <td>31</td>
                      </tr>
                   </tbody>
                </table>
@@ -320,7 +320,7 @@
                  "-4",
                  "-3",
                  "-2",
-                 "-3"
+                 "-4"
                ]
              },
              {
@@ -404,8 +404,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "65",
-                 "59",
-                 "56",
+                 "60",
+                 "57",
                  "58"
                ]
              },
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "53",
-                 "34",
-                 "22",
-                 "19"
+                 "62",
+                 "43",
+                 "33",
+                 "31"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 05:05:02 2018</p>
+         Last Run: Wed Nov 21 06:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -483,35 +483,35 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>51</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
-                        <td>-1</td>
+                        <td>0</td>
                         <td>2</td>
-                        <td>52</td>
+                        <td>53</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WNW</td>
-                        <td>47</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>3</td>
-                        <td>52</td>
+                        <td>2</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NW</td>
-                        <td>44</td>
+                        <td>WNW</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -539,7 +539,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "-1",
+                 "0",
                  "0"
                ]
              },
@@ -611,7 +611,7 @@
                "data":[
                  "2",
                  "2",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "52",
-                 "52"
+                 "57",
+                 "53",
+                 "53"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "51",
-                 "47",
-                 "44"
+                 "52",
+                 "48",
+                 "45"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 05:05:02 2018</p>
+         Last Run: Wed Nov 21 06:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,11 +698,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>71</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>65</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,11 +710,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>72</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>62</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,11 +722,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>73</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>60</td>
+                        <td>67</td>
                      </tr>
                   </tbody>
                </table>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "72",
-                 "73"
+                 "73",
+                 "74",
+                 "75"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
-                 "62",
-                 "60"
+                 "70",
+                 "68",
+                 "67"
                ]
              }
            ]
